modules/gdscript/tests/scripts/analyzer/errors/extend_non_class_constant_1.gd
# GH-75870

final A = 1

class B extends A:
	pass

func test():
	pass
